--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ function updateClock ()
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Hello AKG</h1>
+        <h1>Hello CSG</h1>
         <p>Is it me you're looking for?</p>
       </div>
       <hr/>
       <div class="footer">
-        <p>2020 Karthik Gaekwad,&nbsp;Visits:&nbsp;<span id="visits">&nbsp;</span>,&nbsp;&nbsp;<span id="clock">&nbsp;</span></p>
+        <p>2020 AKG,&nbsp;Visits:&nbsp;<span id="visits">&nbsp;</span>,&nbsp;&nbsp;<span id="clock">&nbsp;</span></p>
         <div title="The container ID is the ID of the container (or host) that is the helloworld application.">Container ID: HOSTNAME
         </div>
       </div>
