--- a/index.html
+++ b/index.html
@@ -1,136 +1,186 @@
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A simple docker helloworld example.">
-    <meta name="author" content="Karthik Gaekwad">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="A simple docker helloworld example.">
+  <meta name="author" content="Karthik Gaekwad">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<script type="text/javascript">
-function init ( )
-{
-  timeDisplay = document.createTextNode ( "" );
-  document.getElementById("clock").appendChild ( timeDisplay );
-}
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <script type="text/javascript">
+    function init() {
+      timeDisplay = document.createTextNode("");
+      document.getElementById("clock").appendChild(timeDisplay);
+    }
 
-function updateVisit ()
-{
-  visitDisplay = document.createTextNode ( "" );
-  document.getElementById("visits").appendChild(visitDisplay);
+    function updateVisit() {
+      visitDisplay = document.createTextNode("");
+      document.getElementById("visits").appendChild(visitDisplay);
 
-  var counter = Cookies.get('counter');
-  if (counter==null){
-  console.log(counter);
-  	counter = 1;
-  }else{
-  	counter = Number(counter) + 1;
+      var counter = Cookies.get('counter');
+      if (counter == null) {
+        console.log(counter);
+        counter = 1;
+      } else {
+        counter = Number(counter) + 1;
+      }
+      Cookies.set('counter', counter);
+      document.getElementById("visits").firstChild.nodeValue = counter;
+    }
+
+    function updateClock() {
+      var currentTime = new Date();
+
+      var currentHours = currentTime.getHours();
+      var currentMinutes = currentTime.getMinutes();
+      var currentSeconds = currentTime.getSeconds();
+
+      // Pad the minutes and seconds with leading zeros, if required
+      currentMinutes = (currentMinutes < 10 ? "0" : "") + currentMinutes;
+      currentSeconds = (currentSeconds < 10 ? "0" : "") + currentSeconds;
+
+      // Choose either "AM" or "PM" as appropriate
+      var timeOfDay = (currentHours < 12) ? "AM" : "PM";
+
+      // Convert the hours component to 12-hour format if needed
+      currentHours = (currentHours > 12) ? currentHours - 12 : currentHours;
+
+      // Convert an hours component of "0" to "12"
+      currentHours = (currentHours == 0) ? 12 : currentHours;
+
+      // Compose the string for display
+      var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds + " " + timeOfDay;
+
+      // Update the time display
+      document.getElementById("clock").firstChild.nodeValue = currentTimeString;
+    }
+
+    function createTable(input) {
+
+      input = input || [
+        { foo: 'f', bar: 'b' },
+        { foo: 'ff', bar: 'bb' },
+        { foo: 'fff', bar: 'bbb' },
+        { foo: 'f', bar: 'b' },
+      ];
+      const table = document.body.appendChild(document.createElement('table'));
+      const thead = table.appendChild(document.createElement('thead'));
+      const tr = thead.appendChild(document.createElement('tr'));
+      const columnTexts = Object.keys(input[0]);
+      columnTexts.forEach((columnText) => {
+        tr.appendChild(document.createElement('td'))
+          .textContent = columnText;
+      });
+      const tbody = table.appendChild(document.createElement('tbody'));
+      input.forEach((item) => {
+        const tr = tbody.appendChild(document.createElement('tr'));
+        const values = Object.values(item);
+        values.forEach(value => {
+          tr.appendChild(document.createElement('td'))
+            .textContent = value;
+        });
+      });
+      return table;
+    }
+  </script>
+
+<style>
+  .jumbotron td {
+    border: 1px black solid;
   }
-  Cookies.set('counter', counter);
-  document.getElementById("visits").firstChild.nodeValue = counter;
-}
-
-function updateClock ()
-{
-  var currentTime = new Date ( );
-
-  var currentHours = currentTime.getHours ( );
-  var currentMinutes = currentTime.getMinutes ( );
-  var currentSeconds = currentTime.getSeconds ( );
-
-  // Pad the minutes and seconds with leading zeros, if required
-  currentMinutes = ( currentMinutes < 10 ? "0" : "" ) + currentMinutes;
-  currentSeconds = ( currentSeconds < 10 ? "0" : "" ) + currentSeconds;
-
-  // Choose either "AM" or "PM" as appropriate
-  var timeOfDay = ( currentHours < 12 ) ? "AM" : "PM";
-
-  // Convert the hours component to 12-hour format if needed
-  currentHours = ( currentHours > 12 ) ? currentHours - 12 : currentHours;
-
-  // Convert an hours component of "0" to "12"
-  currentHours = ( currentHours == 0 ) ? 12 : currentHours;
-
-  // Compose the string for display
-  var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds + " " + timeOfDay;
-
-  // Update the time display
-  document.getElementById("clock").firstChild.nodeValue = currentTimeString;
-}
-</script>
+</style>
 </head>
-<body  onload="updateVisit(); updateClock(); setInterval('updateClock()', 1000 )">
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Docker Helloworld</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="https://github.com/karthequian/docker-helloworld">About</a></li>
-            <li><a href="https://twitter.com/iteration1">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+
+<body onload="updateVisit(); updateClock(); setInterval('updateClock()', 1000 )">
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+          aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Docker Helloworld</a>
       </div>
-    </nav>
-
-    <div class="container theme-showcase" role="main">
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Hello CSG</h1>
-        <p>Is it me you're looking for?</p>
-
-<script type="text/javascript">
-
-        const input = [
-  { foo: 'f', bar: 'b' },
-  { foo: 'ff', bar: 'bb' },
-  { foo: 'fff', bar: 'bbb' },
-  { foo: 'f', bar: 'b' },
-];
-const table = document.body.appendChild(document.createElement('table'));
-const thead = table.appendChild(document.createElement('thead'));
-const tr = thead.appendChild(document.createElement('tr'));
-const columnTexts = Object.keys(input[0]);
-columnTexts.forEach((columnText) => {
-  tr.appendChild(document.createElement('td'))
-    .textContent = columnText;
-});
-const tbody = table.appendChild(document.createElement('tbody'));
-input.forEach((item) => {
-  const tr = tbody.appendChild(document.createElement('tr'));
-  const values = Object.values(item);
-  values.forEach(value => {
-    tr.appendChild(document.createElement('td'))
-      .textContent = value;
-  });
-});
-</script>
-
-
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="https://github.com/karthequian/docker-helloworld">About</a></li>
+          <li><a href="https://twitter.com/iteration1">Contact</a></li>
+        </ul>
       </div>
-      <hr/>
-      <div class="footer">
-        <p>2020 AKG,&nbsp;Visits:&nbsp;<span id="visits">&nbsp;</span>,&nbsp;&nbsp;<span id="clock">&nbsp;</span></p>
-        <div title="The container ID is the ID of the container (or host) that is the helloworld application.">Container ID: HOSTNAME
-        </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+
+  <div class="container theme-showcase" role="main">
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <h1>Hello BTK</h1>
+      <p>Is it me you're looking for?</p>
+
+
+    </div>
+    <hr />
+    <div class="footer">
+      <p>2020 AKG,&nbsp;Visits:&nbsp;<span id="visits">&nbsp;</span>,&nbsp;&nbsp;<span id="clock">&nbsp;</span></p>
+      <div title="The container ID is the ID of the container (or host) that is the helloworld application.">Container
+        ID: HOSTNAME
       </div>
-    </div> <!-- /container -->
-	</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.1/js.cookie.min.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    </div>
+  </div> <!-- /container -->
+  </div>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.1/js.cookie.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+    integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function () {
+      var p = document.querySelector("div.jumbotron>p");
+
+
+      fetch('https://dcdufe4q8x3bowu-db202101291204.adb.eu-frankfurt-1.oraclecloudapps.com/ords/akgatp/hr/employees/')
+        .then(response => response.json())
+        .then(data => {
+          data.items.map(item => {        
+            
+            item.hiredate = formatDate(item.hiredate);
+
+            item.uri = item.uri.$ref;
+            return item;
+          })
+          var myTable = createTable(data.items);
+          p.insertAdjacentElement('afterEnd', myTable);
+        });
+
+    });
+
+    function formatDate(date) {
+    var d = new Date(date),
+        month = '' + (d.getMonth() + 1),
+        day = '' + d.getDate(),
+        year = d.getFullYear();
+
+    if (month.length < 2) 
+        month = '0' + month;
+    if (day.length < 2) 
+        day = '0' + day;
+
+    return [year, month, day].join('-');
+}
+ 
+  </script>
+
 </body>
+
 </html>
