--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <h1>Hello BTK</h1>
+      <h1>Hello Ford</h1>
       <p>Is it me you're looking for?</p>
 
 
